fixing font size of photo credit on mobile

--- a/sass/desktopPortraitStyle.scss
+++ b/sass/desktopPortraitStyle.scss
@@ -246,5 +246,5 @@ border-radius: 10px;
     right:0px;
     bottom:0px;
     background:rgba(0, 0, 0, 0.6);
-    color:rgba(255, 255, 255, 0.6);;
+    color:rgba(255, 255, 255, 0.6);
 }
