--- a/sass/desktopStyle.scss
+++ b/sass/desktopStyle.scss
@@ -261,5 +261,5 @@ h1{
     right:0px;
     bottom:0px;
     background:rgba(0, 0, 0, 0.6);
-    color:rgba(255, 255, 255, 0.6);;
+    color:rgba(255, 255, 255, 0.6);
 }
