--- a/sass/mobileLandscapeStyle.scss
+++ b/sass/mobileLandscapeStyle.scss
@@ -70,3 +70,10 @@ h1{
     height:100px;
     width:100px;
 }
+
+/* ================================================= */
+/* PHOTO CREDIT */
+/* ================================================= */
+.photoCredit{
+    font-size:.5em;
+}
