--- a/sass/mobilePortraitStyle.scss
+++ b/sass/mobilePortraitStyle.scss
@@ -33,3 +33,10 @@ h1{
     height:75px;
     width:75px;
 }
+
+/* ================================================= */
+/* PHOTO CREDIT */
+/* ================================================= */
+.photoCredit{
+    font-size:.5em;
+}
